# video-descrambler

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/video_descrambler/: __init__.py  cli.py  distance_calculation.py  feature_extraction.py  sequencing.py  video_descrambler.py
