[project]
name = "video-descrambler"
version = "1.0.0"
description = "Reconstructs corrupted video files where all frames have been shuffled and new frames have been introduced"
readme = "README.md"
authors = [
    { name = "Thibaut Vercueil", email = "thibaut.vercueil@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "fast-tsp>=0.1.4",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.12.0.88",
    "scikit-learn>=1.7.2",
    "typer>=0.20.0",
]

[project.scripts]
video-descrambler = "video_descrambler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = ["fast_tsp", "sklearn.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
